Fixed overflow in edit tags, admin table

--- a/src/components/Admin/ManageApplicants/Table/TableBody/TableRow/TableRow.css
+++ b/src/components/Admin/ManageApplicants/Table/TableBody/TableRow/TableRow.css
@@ -3,6 +3,7 @@
     width: 100%;
 
     display: grid;
+    grid-auto-rows: minmax(75px, max-content);
     /* grid-template-columns: 1fr 4fr 2fr 1fr 1fr 2fr; */
     grid-template-columns: 98px minmax(285px , 485px) 104px 178px 104px 104px;
     
