--- a/src/components/Applicant/AssignTags/UpdateTagsCard/UpdateTagsCard.css
+++ b/src/components/Applicant/AssignTags/UpdateTagsCard/UpdateTagsCard.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 360px;
   max-width: 360px;
+  max-height: 480px;
   z-index: 3;
 
   position: fixed;
@@ -11,6 +12,10 @@
   background-color: white;
   box-shadow: 0px 4px 8px rgba(37, 42, 49, 0.16), 0px 8px 24px rgba(37, 42, 49, 0.24);
   border-radius: 3px;
+
+  /* overflow-y: scroll; */
+  /* overflow-x: scroll; */
+  overflow: scroll;
 }
 
 #update-tags-card {
@@ -18,7 +23,7 @@
   flex-direction: column;
 
   row-gap: 20px;
-  margin: 20px 16px;
+  padding: 20px 16px 0px 16px;
 }
 
 #current-tags-item {
@@ -87,7 +92,8 @@
 
 #create-new-tag-item {
   display: flex;
-  column-gap: 10px;
+  column-gap: 9px;
+  padding-bottom: 20px;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
